@@ -34,6 +34,7 @@ Verilator 5.039 devel
 * Support multiple variables on RHS of a `force` assignment (#6163). [Artur Bieniek, Antmicro Ltd.]
 * Support covergroup extends, etc., as unsupported (#6160). [Artur Bieniek, Antmicro Ltd.]
 * Change control file `public_flat_*` and other signal attributes to support __ in names (#6140).
+* Change runtime to exit() instead of abort(), unless under +verilated+debug.
 * Improve `--skip-identical` to skip on identical input file contents (#6109).
 * Optimize to return memory when using -build (#6192) (#6226). [Michael B. Taylor]
 * Optimize 2 ** X to 1 << X if base is signed (#6203). [Max Wipfli]
